Versión modificada del proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         </a>
     </div>
     <div>
-      <a lass="espacioFooterB" href="https://www.facebook.com/" target="_blank">
+      <a href="https://www.facebook.com/" target="_blank">
         <img src="https://img.icons8.com/material/50/000000/facebook--v1.png" />
     </a>
   </div>
