--- a/src/pages/nosotros.html
+++ b/src/pages/nosotros.html
@@ -45,13 +45,13 @@
     <h6>Nos dedicamos a la venta de productos saludables desde 2020, el local se encuentra abierto de lunes a sabados de 8hs a 17hs y esta ubicado en la calle Córdoba 1053, Merlo, Buenos Aires. </h6>
     </div>
     <div class="mapaGrande espaciomapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d820.4017808005946!2d-58.734283336644424!3d-34.664623629463996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbfe3c894d66b%3A0x17441e591546d823!2sUniversidad%20Nacional%20del%20Oeste%20-%20Sede%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1719515747554!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe id="mapaN" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d820.4017808005946!2d-58.734283336644424!3d-34.664623629463996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbfe3c894d66b%3A0x17441e591546d823!2sUniversidad%20Nacional%20del%20Oeste%20-%20Sede%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1719515747554!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="mapaChico espaciomapa">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d820.4017808005946!2d-58.734283336644424!3d-34.664623629463996!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbfe3c894d66b%3A0x17441e591546d823!2sUniversidad%20Nacional%20del%20Oeste%20-%20Sede%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1719515747554!5m2!1ses!2sar" width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     </main>
-    <footer class="fondoFooter">
+    <footer class="fondoFooter footerNosotros">
       <div>
         <a class="espacioFooterA" href="https://www.instagram.com/" target="_blank">
             <img src="https://img.icons8.com/glyph-neue/50/000000/instagram-new.png" />
@@ -59,7 +59,7 @@
         </a>
     </div>
     <div>
-      <a lass="espacioFooterB" href="https://www.facebook.com/" target="_blank">
+      <a href="https://www.facebook.com/" target="_blank">
         <img src="https://img.icons8.com/material/50/000000/facebook--v1.png" />
     </a>
   </div>
