--- a/src/pages/productos.html
+++ b/src/pages/productos.html
@@ -2,83 +2,132 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vida equiibrada</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vida equiibrada</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img class="fotoA" src="../images/logoa.jpg" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul id="alineado" class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item estiloA">
-                    <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item estiloB">
-                    <a class="nav-link" aria-current="page" href="nosotros.html">NOSOTROS</a>
-                  </li>
-                  <li class="nav-item estiloC">
-                    <a class="nav-link active" aria-current="page" href="productos.html">PRODUCTOS</a>
-                  </li>
-                  <li class="nav-item estiloD">
-                    <a class="nav-link" aria-current="page" href="contacto.html">CONTACTO</a>
-                  </li>
-                </ul>
-              </div>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html"><img class="fotoA" src="../images/logoa.jpg" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul id="alineado" class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item estiloA">
+              <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item estiloB">
+              <a class="nav-link" aria-current="page" href="nosotros.html">NOSOTROS</a>
+            </li>
+            <li class="nav-item estiloC">
+              <a class="nav-link active" aria-current="page" href="productos.html">PRODUCTOS</a>
+            </li>
+            <li class="nav-item estiloD">
+              <a class="nav-link" aria-current="page" href="contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="fondoMainProductos espacioProductos">
+    <div class="container mt-4">
+      <h4>Total del carrito: $<span id="totalCarrito">0</span></h4>
+      <div class="container mt-2">
+        <h5>Carrito:</h5>
+        <ul id="listaCarrito" class="list-group"></ul>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoE.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Caja barra de cereal Tosh</h5>
+              <h5 class="card-text">$3000</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="3000">Añadir al carrito</a>
             </div>
-          </nav>
-    </header>
-    <main class="fondoMainProductos cards espacioProductos">
-      <div class="card espacioCards" style="width: 18rem; height: 420px;">
-        <img src="../images/productoE.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Caja barra de cereal Tosh</h5>
-          <h5 class="card-text">$3000</h5>
-          <a href="#" class="btn btn-primary">Añadir al carrito</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoC.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Alfajor dietetico</h5>
+              <h5 class="card-text">$1200</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="1200">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoA.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Barra Cereal Mix</h5>
+              <h5 class="card-text">$900</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="900">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoA.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Barra Cereal Mix</h5>
+              <h5 class="card-text">$900</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="900">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoC.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Alfajor dietetico</h5>
+              <h5 class="card-text">$1200</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="1200">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <img src="../images/productoE.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Caja barra de cereal Tosh</h5>
+              <h5 class="card-text">$3000</h5>
+              <a href="#" class="btn btn-primary agregar-carrito" data-precio="3000">Añadir al carrito</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card espacioCards" style="width: 18rem; height: 420px;">
-        <img src="../images/productoC.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Alfajor dietetico</h5>
-          <h5 class="card-text">$1200</h5>
-          <a href="#" class="btn btn-primary">Añadir al carrito</a>
-        </div>
-      </div>
-      <div class="card espacioCards" style="width: 18rem; height: 420px;">
-        <img src="../images/productoA.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Barra Cereal Mix</h5>
-          <h5 class="card-text">$900</h5>
-          <a href="#" class="btn btn-primary">Añadir al carrito</a>
-        </div>
-      </div>
-    </main>
-    <footer class="fondoFooter">
-      <div>
-        <a class="espacioFooterA" href="https://www.instagram.com/" target="_blank">
-            <img src="https://img.icons8.com/glyph-neue/50/000000/instagram-new.png" />
-            
-        </a>
+    </div>
+  </main>
+  <footer class="fondoFooter">
+    <div>
+      <a class="espacioFooterA" href="https://www.instagram.com/" target="_blank">
+        <img src="https://img.icons8.com/glyph-neue/50/000000/instagram-new.png" />
+
+      </a>
     </div>
     <div>
-      <a lass="espacioFooterB" href="https://www.facebook.com/" target="_blank">
+      <a href="https://www.facebook.com/" target="_blank">
         <img src="https://img.icons8.com/material/50/000000/facebook--v1.png" />
-    </a>
-  </div>
-    </footer>
-
+      </a>
+    </div>
+  </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
