--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vida equiibrada</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img class="fotoA" src="./images/logoa.jpg" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img class="fotoA" src="./src/images/logoa.jpg" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -26,13 +26,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
                   </li>
                   <li class="nav-item estiloB">
-                    <a class="nav-link" aria-current="page" href="./pages/nosotros.html">NOSOTROS</a>
+                    <a class="nav-link" aria-current="page" href="./src/pages/nosotros.html">NOSOTROS</a>
                   </li>
                   <li class="nav-item estiloC">
-                    <a class="nav-link" aria-current="page" href="./pages/productos.html">PRODUCTOS</a>
+                    <a class="nav-link" aria-current="page" href="./src/pages/productos.html">PRODUCTOS</a>
                   </li>
                   <li class="nav-item estiloD">
-                    <a class="nav-link" aria-current="page" href="./pages/contacto.html">CONTACTO</a>
+                    <a class="nav-link" aria-current="page" href="./src/pages/contacto.html">CONTACTO</a>
                   </li>
                 </ul>
               </div>
@@ -49,13 +49,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./images/fotoA.webp" class="d-block w-100" alt="...">
+              <img src="./src/images/fotoA.webp" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./images/fotoB.webp" class="d-block w-100" alt="...">
+              <img src="./src/images/fotoB.webp" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="./images/fotoC.webp" class="d-block w-100" alt="...">
+              <img src="./src/images/fotoC.webp" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -69,13 +69,13 @@
         </div>
         <div class="inicio-card">
           <picture class="espacio-card-index">
-            <img class="tamanio-img-index" src="./images/img-inicio1.webp" alt="">
+            <img class="tamanio-img-index" src="./src/images/img-inicio1.webp" alt="">
           </picture>
           <picture class="espacio-card-index">
-            <img class="tamanio-img-index" src="./images/img-inicio2.webp" alt="">
+            <img class="tamanio-img-index" src="./src/images/img-inicio2.webp" alt="">
           </picture>
           <picture class="espacio-card-index">
-            <img class="tamanio-img-index" src="./images/img-inicio3.webp" alt="">
+            <img class="tamanio-img-index" src="./src/images/img-inicio3.webp" alt="">
           </picture>
         </div>
     </main>
