--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -16,14 +16,14 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><img class="fotoA" src="../images/logoa.jpg" alt=""></a>
+              <a class="navbar-brand" href="../../index.html"><img class="fotoA" src="../images/logoa.jpg" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="alineado" class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item estiloA">
-                        <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">INICIO</a>
                       </li>
                       <li class="nav-item estiloB">
                         <a class="nav-link" aria-current="page" href="nosotros.html">NOSOTROS</a>
